<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.AddReminder"
    android:id="@+id/main_layout_Re">

<LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="3dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingBottom="40dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="12dp">

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/title_pre"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:counterEnabled="false"
                app:counterMaxLength="50"
                app:counterTextAppearance="@style/CounterAppearance"
                app:counterOverflowTextAppearance="@style/CounterOverflowAppearance"
                app:errorEnabled="false">

            <EditText
                android:id="@+id/locationEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="Location"/>

</android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorAppearance">
            <EditText
                android:id="@+id/contentEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="Content"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/start_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/startColour"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin"

            >

            <TextView
                android:id="@+id/start_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:hint="@string/startdatetime_hint"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/start_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/endColour"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin"

            >

            <TextView
                android:id="@+id/end_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:hint="@string/enddatetime_hint"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/end_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save"

            />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>